Fixed too small line height of location text in emails

--- a/app/assets/stylesheets/mailers/email_sharing_mailer.css
+++ b/app/assets/stylesheets/mailers/email_sharing_mailer.css
@@ -156,8 +156,8 @@ h4 span{
 }
 #identity-table p.graylight-text{
   font-weight:300;
-  line-height:13px;
-  margin-bottom:5px;
+  line-height:15px;
+  margin-bottom:4px;
 }
 
 /* Experience */
